# Flatpack

./: .deepsource.toml  .dockerignore  .gitignore  Dockerfile  README.md  README_OLD.md  fast_api_test.py  install.sh  public_key.pem  pyenv-ubuntu-0.0.1.sh  pyenv-ubuntu-0.0.2.sh  pyenv-ubuntu-0.0.3.sh  pyenv-ubuntu.sh  ubuntu-installer.sh  verify_fpk.sh
.github/workflows/: compress_and_sign.yml  main.yml  rust.yml  test-script.yml
agents/: fast_api_local.py  fast_api_ngrok.py  fast_api_test.py  ubuntu_setup.sh
client/: Cargo.toml  Containerfile  reset-docker-podman.sh  reset-docker.sh
client/docker/flatpack-ai-docker/: Dockerfile
client/src/: container.rs  main.rs  parser.rs
client/src/parsing/: bash.rs  containerfile.rs  mod.rs
client/static/css/: main.css  reset.css  style.css
client/static/js/: main.js
client/templates/: main.html
datasets/: DATASET.md  README.md  TEMPLATE.md
docker/: Dockerfile  custom.sh  docker-compose.yml  network.sh
docker/flatpack-ai-docker/: Dockerfile
engines/: engine_llama_cpp.py  fast_api_test.py
example/: Containerfile
flatpacks/: README.md
navformer/: app.py  build.sh  nanogpt_prepare.py  nanogpt_train.sh  navformer_schema.json  navformer_test.py  prepare.py  requirements.txt  schema.json  setup.sh  train.sh
navformer/data/: llama_cpp_build.sh  llama_cpp_generate.py
notebooks/: flatpack_ai_RNNLM.ipynb  flatpack_ai_autotrain.ipynb  flatpack_ai_classroom.ipynb  flatpack_ai_conv_ai.ipynb  flatpack_ai_convert_to_gguf.ipynb  flatpack_ai_ctransformers.ipynb  flatpack_ai_gguf.ipynb  flatpack_ai_modules.ipynb  flatpack_ai_playground.ipynb  flatpack_ai_rnn.ipynb  flatpack_ai_template.ipynb  flatpack_ai_tinyllama.ipynb  flatpack_playground.ipynb
notebooks/assets/: hello_world.py
package/flatpack/: README.md  build.sh  reset-package.sh  reset.sh  setup.py
simulator/: app.js  index.html
simulators/: cobot.html
simulators/cobot/: RobotController.js  dataset.txt  generate_dataset.py  index.html  reset.css  script.js  style.css
test/: custom.sh  mac_test.sh  process.py  requirements.txt  temp.sh  test.fpk  test.sh
translate/: translate.sh
tutorial/: README.md
utilities/mps_test/: README  (+1 more)
warehouse/: README.md  init.sh  public_key.pem  temp.flatpack
(+434 files in other folders)
