[package]
name = "flatpack_ai"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.3.1"
anyhow = "1.0.71"
bollard = "0.14.0"
chrono = "0.4.24"
dockerfile-parser = "0.8.0"
futures-util = "0.3.28"
reqwest = { version = "0.11.17", features = ["json"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["full"] }
toml = "0.7.3"