[package]
name = "flatpack_ai"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2" # MIT OR Apache-2.0
actix-web = "4.3.1" # MIT OR Apache-2.0
anyhow = "1.0.75" # MIT OR Apache-2.0
bollard = "0.14.0" # Apache-2.0
chrono = "0.4.26" # MIT OR Apache-2.0
dockerfile-parser = "0.8.0" # MIT
futures-util = "0.3.28" # MIT OR Apache-2.0
reqwest = { version = "0.11.18", features = ["json"] } # MIT OR Apache-2.0
serde = { version = "1.0.185", features = ["derive"] } # MIT OR Apache-2.0
serde_json = "1.0.105" # MIT OR Apache-2.0
structopt = "0.3.26" # MIT OR Apache-2.0
tera = "1.19.0" # MIT
tokio = { version = "1.32.0", features = ["full"] } # MIT
toml = "0.7.6" # MIT OR Apache-2.0